--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2024"
 
 [dependencies]
 rand = "0.9.2"
-raylib = { version = "5.5.1", features = ["wayland"] }
+raylib = { version = "5.5.1", features = ["imgui", "wayland"] }
